# bazel_dependency_tools

./: BUILD  README.md  WORKSPACE  app.go  go.mod  go.sum  maven-jar-sha1-to-sha256.sh  parser_test.go
.github/workflows/: workflow.yml
hack/: update-jar-dep.sh
http_archive/: BUILD.bazel  check.go
internal/: BUILD.bazel  replacement.go
internal/github/: BUILD.bazel  github.go
internal/semver/: BUILD.bazel  semver.go
licenses/: BUILD.bazel  licenses.go
maven_jar/: BUILD.bazel  check.go  check_test.go  license.go
parse/: BUILD.bazel  parse.go  parse_test.go
testdata/: git_repository_WORKSPACE  maven_install_WORKSPACE  maven_jar_WORKSPACE  pinned_major_WORKSPACE  rules_go_0_19_3_WORKSPACE
