load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["check.go"],
    importpath = "github.com/zegl/bazel_dependency_tools/http_archive",
    visibility = ["//visibility:public"],
    deps = [
        "//internal:go_default_library",
        "//internal/github:go_default_library",
        "@com_github_blang_semver//:go_default_library",
        "@com_github_google_go_github_v28//github:go_default_library",
        "@net_starlark_go//syntax:go_default_library",
    ],
)
