load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["parse.go"],
    importpath = "github.com/zegl/bazel_dependency_tools/parse",
    visibility = ["//visibility:public"],
    deps = [
        "@net_starlark_go//starlark:go_default_library",
        "@net_starlark_go//syntax:go_default_library",
    ],
)
