load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["parse.go"],
    importpath = "github.com/zegl/bazel_dependency_tools/parse",
    visibility = ["//visibility:public"],
    deps = ["@net_starlark_go//syntax:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["parse_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@net_starlark_go//syntax:go_default_library",
    ],
)
