load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["github.go"],
    importpath = "github.com/zegl/bazel_dependency_tools/internal/github",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_google_go_github_v28//github:go_default_library"],
)
