load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["semver.go"],
    importpath = "github.com/zegl/bazel_dependency_tools/internal/semver",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_blang_semver//:go_default_library"],
)
